[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = controltheory
description = Control Theory modeling and analysis
long_description = This package does control theory work for astronomical AO systems.
author = Alexander Rudy
author_email = arrudy@ucsc.edu
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = alexrudy/controltheory

[entry_points]
